# Practise5

./: .gitignore  CMakeLists.txt
task1/: BigInt.cpp  BigInt.h  long_arithmetic.cpp  long_arithmetic.h  main.cpp
task2/: logic.cpp  logic.h  main.cpp
task3/: logic.cpp  logic.h  main.cpp
